--- a/htscodecs/Makefile.am
+++ b/htscodecs/Makefile.am
@@ -66,8 +66,8 @@ libhtscodecs_la_LDFLAGS = -version-info @VERS_CURRENT@:@VERS_REVISION@:@VERS_AGE
 libhtscodecs_la_LIBADD = @LIBZ@
 
 # AM_CFLAGS so users can override CFLAGS without breaking the build.
-rANS_static32x16pr_avx2.o:   AM_CFLAGS+=-mavx2
-rANS_static32x16pr_avx2.lo:  AM_CFLAGS+=-mavx2
+rANS_static32x16pr_avx2.o:   AM_CFLAGS+=@MAVX2@
+rANS_static32x16pr_avx2.lo:  AM_CFLAGS+=@MAVX2@
 
 version.h: force
 	@ if `git describe 2>/dev/null >/dev/null`; then \
