Add AVX512 order-0 rANS.
Example of AVX2 vs AVX512 on q40 file:

4-way:  374.8 MB/s enc,  783.7 MB/s dec	 101000000 bytes -> 51136478 bytes
Scalar: 256.1 MB/s enc,  622.0 MB/s dec	 101000000 bytes -> 51144602 bytes
AVX2:   500.2 MB/s enc, 1688.1 MB/s dec	 101000000 bytes -> 51144602 bytes
AVX512: 752.8 MB/s enc, 2132.8 MB/s dec	 101000000 bytes -> 51144602 bytes

Not *huge* gains vs AVX2, but worthy.  It becomes memory bottlenecked
on the data gathers.

Order-1 hasn't yet been written, but I'd hope that could gain also.

--- a/configure.ac
+++ b/configure.ac
@@ -111,6 +111,12 @@ AX_CHECK_COMPILE_FLAG([-mavx2], [
 	AC_SUBST(MAVX2)
         AC_DEFINE([HAVE_AVX2],1,[Defined to 1 if the compiler can issue AVX2 instructions.])])
 
+dnl Check also if we have AVX512.  If so this overrides AVX2
+AX_CHECK_COMPILE_FLAG([-mavx512f], [
+        MAVX512=-mavx512f
+	AC_SUBST(MAVX512)
+        AC_DEFINE([HAVE_AVX512],1,[Defined to 1 if the compiler can issue AVX512F instructions.])])
+
 AX_LIBDEFLATE
 
 dnl Checks for header files.
