Add an SSE4.1 32-way order-0 decoder.
Comparing scalar code vs SSE4.1 code the decode timings are:
On AMD Opteron(TM) Processor 6272,           202 to 399MB/s
On Intel(R) Xeon(R) CPU E5-2660 0 @ 2.20GHz, 364 to 637MB/s
On Intel(R) Core(TM) i5-4570 CPU @ 3.20GHz,  546 to 834MB/s
On Intel(R) Xeon(R) Gold 6142 CPU @ 2.60GHz, 611 to 929MB/s

The latter two have AVX2 and the last also AVX512 available, but
disabled for this test.

--- a/htscodecs/Makefile.am
+++ b/htscodecs/Makefile.am
@@ -46,6 +46,7 @@ libhtscodecs_la_SOURCES = \
 	rANS_word.h \
 	rANS_static32x16pr.c \
 	rANS_static32x16pr.h \
+	rANS_static32x16pr_sse4.c \
 	rANS_static32x16pr_avx2.c \
 	rANS_static32x16pr_avx512.c \
 	permute.h \
@@ -66,6 +67,8 @@ libhtscodecs_la_LDFLAGS = -version-info @VERS_CURRENT@:@VERS_REVISION@:@VERS_AGE
 libhtscodecs_la_LIBADD = @LIBZ@
 
 # AM_CFLAGS so users can override CFLAGS without breaking the build.
+rANS_static32x16pr_sse4.o:   AM_CFLAGS+=@MSSE4_1@ @MSSSE3@ @MPOPCNT@
+rANS_static32x16pr_sse4.lo:  AM_CFLAGS+=@MSSE4_1@ @MSSSE3@ @MPOPCNT@
 rANS_static32x16pr_avx2.o:   AM_CFLAGS+=@MAVX2@
 rANS_static32x16pr_avx2.lo:  AM_CFLAGS+=@MAVX2@
 rANS_static32x16pr_avx512.o:   AM_CFLAGS+=@MAVX512@
